tests/parser/errors/positional_param_after_default.ray
fn foo(a: int=8, b: bool) {}

foo(a=5, "abcd")
